Fixed wierd characters in output to console